src/integration/snapshots/rustclean__integration__screens__theme-report-colorblind-en.snap
---
source: src/integration/screens.rs
expression: screen
---
 rustClean  Largest files — /Users/demo  │  17 rows, 8.6 GiB (on disk)
──────────────────────────────────── Date: ██ ≤ 7 days   ██ ≤ 30 days   ██ ≤ 1 year   ██ > 1 year
      Size        Count      Modified         Location
▶ [ ]     3.0 GiB            2025-08-27 12:00 Downloads/Xcode_16.xip
  [ ]     2.3 GiB            2025-02-28 12:00 Movies/holiday-2024.mp4
  [ ]   900.0 MiB            2026-08-22 12:00 Movies/screen-recording.mov
  [ ]   820.0 MiB            2026-06-03 12:00 Projects/api/target/debug/api
  [ ]   610.0 MiB            2026-09-30 12:00 Library/Caches/com.example.browser/cache.db
  [ ]   450.0 MiB            2026-03-15 12:00 Downloads/setup.dmg
  [ ]   310.0 MiB            2026-09-28 12:00 Projects/web/node_modules/react/index.js
  [ ]   150.0 MiB            2026-08-02 12:00 Applications/Sketchpad.app/Contents/MacOS/Sketchpad
  [ ]   120.0 MiB            2026-09-19 12:00 Downloads/photos.zip
  [ ]    55.0 MiB            2026-09-11 12:00 Library/Application Support/com.example.sketchpad/stat
  [ ]     4.0 MiB            2025-12-05 12:00 Documents/taxes-2025.pdf
  [ ]     3.0 MiB            2026-09-29 12:00 Downloads/report.pdf
  [ ]    16.0 KiB            2026-09-30 12:00 Documents/notes.md
  [ ]     4.0 KiB            2026-07-03 12:00 Documents/README.md
  [ ]     4.0 KiB            2026-06-03 12:00 Projects/api/Cargo.toml
  [ ]     4.0 KiB            2026-09-28 12:00 Projects/web/README.md
  [ ]     4.0 KiB            2026-09-28 12:00 Projects/web/package.json







────────────────────────────────────────────────────────────────────────────────────────────────────
Enter: open the file's folder
 ↑↓  move   Space  to basket   t  all   f  age filter   x  move to trash   S  basket   Enter  open /
--- styles (column+width foreground/background modifiers) ---
 0: 0+11 Black/Indexed(74) BOLD
 1: 36+7 White/- BOLD | 43+2 Indexed(33)/- | 45+12 White/- | 57+2 Indexed(117)/- | 59+13 White/- | 72+2 Indexed(227)/- | 74+12 White/- | 86+2 Indexed(202)/- | 88+12 White/-
 2: 0+100 -/- BOLD | UNDERLINED
 3: 0+100 White/Indexed(238) BOLD
 4: 2+3 Gray/- | 29+16 Indexed(202)/-
 5: 2+3 Gray/- | 29+16 Indexed(227)/-
 6: 2+3 Gray/- | 29+16 Indexed(227)/-
 7: 2+3 Gray/- | 29+16 Indexed(33)/-
 8: 2+3 Gray/- | 29+16 Indexed(227)/-
 9: 2+3 Gray/- | 29+16 Indexed(33)/-
10: 2+3 Gray/- | 29+16 Indexed(227)/-
11: 2+3 Gray/- | 29+16 Indexed(117)/-
12: 2+3 Gray/- | 29+16 Indexed(117)/-
13: 2+3 Gray/- | 29+16 Indexed(227)/-
14: 2+3 Gray/- | 29+16 Indexed(33)/-
15: 2+3 Gray/- | 29+16 Indexed(33)/-
16: 2+3 Gray/- | 29+16 Indexed(227)/-
17: 2+3 Gray/- | 29+16 Indexed(227)/-
18: 2+3 Gray/- | 29+16 Indexed(33)/-
19: 2+3 Gray/- | 29+16 Indexed(33)/-
28: 0+100 Gray/-
29: 0+4 Black/Gray | 11+7 Black/Gray | 30+3 Black/Gray | 39+3 Black/Gray | 55+3 Black/Gray | 74+3 Black/Gray | 86+7 Black/Gray
